# M1-Sync

./: .env  .env.development  .gitignore  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: release.yml
public/: icon.icns
public/app.icon/: icon.json
scripts/: release.mjs
src/: main.tsx  style.css  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: Assets.car  app.icns  icon.icns
src-tauri/src/: lib.rs  main.rs
src/backend-electron/: main.js  preload.js  renderer.jsx
src/backend-electron/utils/: fingerprint.js  index.js  menu.js
src/components/: dashboard.tsx  loader.tsx  not-found.tsx
src/components/ui/: toggle.tsx  tooltip.tsx
src/lib/: auth.ts  stations.ts  utils.ts
src/pages/: connect.tsx  preferences.tsx  preload.tsx  station.tsx  stations.tsx
src/store/: auth.ts  index.ts  relay.ts  stations.ts
